@@ -111,12 +111,15 @@ has _format_validations => (
         fc(Mojo::URL->new($_[0])->to_unsafe_string) eq fc($_[0]) && $_[0] !~ /[^[:ascii:]]/;
       },
       iri => sub { Mojo::URL->new($_[0])->is_abs },
-      'iri-reference' => sub { 1 },
       uuid => sub { $_[0] =~ /^[[:xdigit:]]{8}-(?:[[:xdigit:]]{4}-){3}[[:xdigit:]]{12}$/ },
-      'uri-template' => sub { 1 },
       'json-pointer' => sub { (!length($_[0]) || $_[0] =~ m{^/}) && $_[0] !~ m{~(?![01])} },
       'relative-json-pointer' => sub { $_[0] =~ m{^[0-9]+(?:#$|$|/)} && $_[0] !~ m{~(?![01])} },
       regex => sub { eval { qr/$_[0]/; 1 ? 1 : 0 } },
+
+      # TODO: if the metaschema's $vocabulary entry is true, then we must die on
+      # encountering these unimplemented formats.
+      'iri-reference' => sub { 1 },
+      'uri-template' => sub { 1 },
     };
 
     # the subrefs from JSON::Schema::Draft201909->new(format_evaluations => { ... })
@@ -140,8 +143,6 @@ sub _traverse_keyword_format {
 sub _eval_keyword_format {
   my ($self, $data, $schema, $state) = @_;
 
-  # TODO: instead of checking 'validate_formats', we should be referring to the metaschema's entry
-  # for $vocabulary: { <format url>: <bool> }
   if ($state->{validate_formats}
       and my $spec = $self->_get_format_validation($schema->{format})) {
     return E($state, 'not a%s %s', $schema->{format} =~ /^[aeio]/ ? 'n' : '', $schema->{format})
