@@ -15,7 +15,7 @@ my $accepter = Test::JSON::Schema::Acceptance->new(test_dir => 't/additional-tes
 
 plan skip_all => 'no tests in this directory to test' if not @{$accepter->_test_data};
 
-my %options = (validate_formats => 1);
+my %options = ();
 my $js = JSON::Schema::Draft201909->new(%options);
 my $js_short_circuit = JSON::Schema::Draft201909->new(%options, short_circuit => 1);
 my $encoder = JSON::MaybeXS->new(allow_nonref => 1, utf8 => 0, convert_blessed => 1, canonical => 1, pretty => 1);
