@@ -34,7 +34,7 @@ my $accepter = Test::JSON::Schema::Acceptance->new(
   verbose => 1,
 );
 
-my %options = (validate_formats => 1);
+my %options = ();
 my $js = JSON::Schema::Draft201909->new(%options);
 my $js_short_circuit = JSON::Schema::Draft201909->new(%options, short_circuit => 1);
 
